phyto microscopy and HPLC - dig deeper 4 ms2

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group1.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group1.ipynb
@@ -12,6 +12,8 @@
     "- ERA5 Wind\n",
     "- ERA5 SST\n",
     "- ERA5 Precipitation\n",
+    "- ERA5 Evaporation\n",
+    "- ERA5 irradiance\n",
     "- MERGED Satellite Chl a"
    ]
   },
