--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group2.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group2.ipynb
@@ -9,15 +9,16 @@
     "\n",
     "## GROUP 2\n",
     "\n",
-    "- ERA5 Wind\n",
-    "- ERA5 Precipitation\n",
-    "- ERA5 Evaporation\n",
+    "- Satellite merged\n",
+    "- ERA5 cdir (irradiance)\n",
+    "- ERA5 mtpr (precipitation)\n",
     "- TimeSeries 21° Isotherm\n",
-    "- TimeSeries Chlorophyll\n",
-    "- TimeSeries Phaeopigment\n",
-    "- TimeSeries NO3\n",
-    "- TimeSeries PO4\n",
-    "- TimeSeries SiO4"
+    "- TimeSeries Chlorophyll 35m\n",
+    "- TimeSeries Tchla\n",
+    "- TimeSeries Phaeopigment 35m\n",
+    "- TimeSeries NO3 35m\n",
+    "- TimeSeries PO4 35m\n",
+    "- TimeSeries SiO4 35m"
    ]
   },
   {
