--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group3.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataCatalogueViz/Plots_Group3.ipynb
@@ -9,11 +9,12 @@
     "\n",
     "## GROUP 3\n",
     "\n",
-    "- ERA5 Wind\n",
+    "- ERA5 cdir irradiance\n",
+    "- TimeSeries Temperature 35m\n",
     "- TimeSeries 21° Isotherm\n",
-    "- TimeSeries NO3\n",
-    "- TimeSeries PO4\n",
-    "- TimeSeries SiO4\n",
+    "- TimeSeries NO3  35m\n",
+    "- TimeSeries PO4  35m\n",
+    "- TimeSeries SiO4  35m\n",
     "\n",
     "- HPLC Func groups (8x)"
    ]
