--- a/CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/ReadData_ALL_prelim.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/ReadData_ALL_prelim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3917,7 +3917,7 @@
     "niskin['ISO_DateTime_start_hc_local'].values = pd.to_datetime(niskin['ISO_DateTime_start_hc_local'].astype('str').values)\n",
     "niskin['ISO_DateTime_end_hc_local'].values = pd.to_datetime(niskin['ISO_DateTime_end_hc_local'].astype('str').values)\n",
     "niskin['ISO_DateTime_start_bc_local'].values = pd.to_datetime(niskin['ISO_DateTime_start_bc_local'].astype('str').values)\n",
-    "niskin['ISO_DateTime_end_bc_local'].values = pd.to_datetime(niskin['ISO_DateTime_end_bc_local'].astype('str').values)\n"
+    "niskin['ISO_DateTime_end_bc_local'].values = pd.to_datetime(niskin['ISO_DateTime_end_bc_local'].astype('str').values)"
    ]
   },
   {
@@ -4182,6 +4182,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HPLC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check time coverages\n",
+    "# extract pigment data to csv --> calc size classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HPLC_bbrs = xr.open_dataset(\"hplc_bbrs.netcdf\")\n",
+    "HPLC_mote = xr.open_dataset(\"hplc_mote.netcdf\")\n",
+    "HPLC_hpl = xr.open_dataset(\"hplc_hpl.netcdf\")\n",
+    "HPLC_ngsfc = xr.open_dataset(\"hplc_ngsfc.netcdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Fuco\n",
+    "- Peri\n",
+    "- Allo\n",
+    "- 19'BF\n",
+    "- 19'HF\n",
+    "- Zea\n",
+    "- TChlb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DP =  1.41 * Fuco  +  1.41 * Peri  +  0.60 * Allo  +  0.35 * _19BF  +  1.27 * _19HF + 0.86 * Zea  +  1.01 * TChlb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#HPLC_bbrs.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HPLC_bbrs.data_vars\n",
+    "\n",
+    "HPLC = [HPLC_bbrs, HPLC_mote, HPLC_hpl, HPLC_ngsfc]\n",
+    "\n",
+    "pigments = [\"Fuco\",\"Perid\",\"Allo\",\"But_fuco\",\"Hex_fuco\",\"Zea\",\"Tot_Chl_b\"]\n",
+    "\n",
+    "\n",
+    "for dat in HPLC:\n",
+    "    dat.depth.values = convert_numeric_data(dat, \"depth\")\n",
+    "    dat.Date_time_UTC.values = pd.to_datetime(dat.Date_time_UTC.astype('str').values)\n",
+    "    for pig in pigments:\n",
+    "        # print(dat[pig].values.dtype)\n",
+    "        if dat[pig].values.dtype != np.float64:\n",
+    "            # print(\"HHHHEEEEY therey\")\n",
+    "            dat[pig].values = convert_numeric_data(dat, \"Tot_Chl_b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### generate dataframes of relevant pigments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BBRS\n",
+      "MOTE\n",
+      "HPL\n",
+      "NGSFC\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_cols = [\"Date_time_UTC\", \"depth\"] + pigments\n",
+    "\n",
+    "datasets = [\"BBRS\", \"MOTE\", \"HPL\", \"NGSFC\"]\n",
+    "\n",
+    "\n",
+    "df_list = [pd.DataFrame(), pd.DataFrame(), pd.DataFrame(), pd.DataFrame()]\n",
+    "\n",
+    "for df, dat, dset in zip(df_list, HPLC, datasets):\n",
+    "    print(dset)\n",
+    "    for col in full_cols:\n",
+    "        df[col] = dat[col]\n",
+    "    df['dataset'] = dset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### merge dataframe list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HPLC_FULL = pd.concat(df_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export dataframe to interpolate/integrate\n",
+    "HPLC_FULL.to_csv(\"HPLC_SizePigments.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4205,7 +4352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
