calc HPLC sizes

--- a/CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/ReadData_ALL_prelim.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/VeryNEWESTCariacoData/ReadData_ALL_prelim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4200,7 +4200,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xarray.Dataset {\n",
+      "dimensions:\n",
+      "\tunlimited = 246 ;\n",
+      "\n",
+      "variables:\n",
+      "\t|S513 Cruise_ID1(unlimited) ;\n",
+      "\t|S513 Cruise_ID2(unlimited) ;\n",
+      "\tfloat64 Cruise_number(unlimited) ;\n",
+      "\tfloat64 leg(unlimited) ;\n",
+      "\tfloat64 cast(unlimited) ;\n",
+      "\tfloat64 Date(unlimited) ;\n",
+      "\t|S513 Analyzed_by(unlimited) ;\n",
+      "\tfloat64 lon_n(unlimited) ;\n",
+      "\tfloat64 lat_n(unlimited) ;\n",
+      "\tfloat64 lon(unlimited) ;\n",
+      "\tfloat64 lat(unlimited) ;\n",
+      "\tfloat64 year(unlimited) ;\n",
+      "\tfloat64 month(unlimited) ;\n",
+      "\tfloat64 day(unlimited) ;\n",
+      "\tfloat64 depth_bottom(unlimited) ;\n",
+      "\t|S513 Date_time_local(unlimited) ;\n",
+      "\t|S513 time_start_local(unlimited) ;\n",
+      "\t|S513 time_end_local(unlimited) ;\n",
+      "\t|S513 time_start_UTC(unlimited) ;\n",
+      "\t|S513 time_end_UTC(unlimited) ;\n",
+      "\tdatetime64[ns] Date_time_UTC(unlimited) ;\n",
+      "\t|S513 sample_number(unlimited) ;\n",
+      "\tfloat64 depth(unlimited) ;\n",
+      "\tfloat64 Tot_Chl_a(unlimited) ;\n",
+      "\tfloat64 Tot_Chl_b(unlimited) ;\n",
+      "\t|S513 Tot_Chl_c(unlimited) ;\n",
+      "\t|S513 alpha_beta_Car(unlimited) ;\n",
+      "\tfloat64 alpha_Car(unlimited) ;\n",
+      "\tfloat64 beta_Car(unlimited) ;\n",
+      "\tfloat64 But_fuco(unlimited) ;\n",
+      "\tfloat64 Hex_fuco(unlimited) ;\n",
+      "\tfloat64 Allo(unlimited) ;\n",
+      "\tfloat64 Diadino(unlimited) ;\n",
+      "\tfloat64 Diato(unlimited) ;\n",
+      "\tfloat64 Fuco(unlimited) ;\n",
+      "\tfloat64 Perid(unlimited) ;\n",
+      "\tfloat64 Zea(unlimited) ;\n",
+      "\t|S513 MV_Chl_a(unlimited) ;\n",
+      "\t|S513 DV_Chl_a(unlimited) ;\n",
+      "\tfloat64 Chlide_a(unlimited) ;\n",
+      "\t|S513 Chl_a_allom(unlimited) ;\n",
+      "\t|S513 Chl_a_prime(unlimited) ;\n",
+      "\t|S513 MV_Chl_b(unlimited) ;\n",
+      "\t|S513 DV_Chl_b(unlimited) ;\n",
+      "\t|S513 Chl_c1(unlimited) ;\n",
+      "\t|S513 Chl_c2(unlimited) ;\n",
+      "\tfloat64 Chl_c1c2(unlimited) ;\n",
+      "\tfloat64 Chl_c3(unlimited) ;\n",
+      "\tfloat64 Lut(unlimited) ;\n",
+      "\t|S513 Neo(unlimited) ;\n",
+      "\t|S513 Viola(unlimited) ;\n",
+      "\t|S513 Phytin_a(unlimited) ;\n",
+      "\t|S513 Phide_a(unlimited) ;\n",
+      "\tfloat64 Pras(unlimited) ;\n",
+      "\t|S513 Anth(unlimited) ;\n",
+      "\t|S513 Gyro(unlimited) ;\n",
+      "\t|S513 TChl(unlimited) ;\n",
+      "\t|S513 PPC(unlimited) ;\n",
+      "\t|S513 PSC(unlimited) ;\n",
+      "\t|S513 PSP(unlimited) ;\n",
+      "\t|S513 Tcar(unlimited) ;\n",
+      "\t|S513 Tacc(unlimited) ;\n",
+      "\t|S513 Tpg(unlimited) ;\n",
+      "\t|S513 DP(unlimited) ;\n",
+      "\t|S513 Tacc_TChla(unlimited) ;\n",
+      "\t|S513 PSC_Tcar(unlimited) ;\n",
+      "\t|S513 PPC_Tcar(unlimited) ;\n",
+      "\t|S513 TChl_Tcar(unlimited) ;\n",
+      "\t|S513 PPC_Tpg(unlimited) ;\n",
+      "\t|S513 PSP_Tpg(unlimited) ;\n",
+      "\t|S513 TChla_Tpg(unlimited) ;\n",
+      "\t|S513 mPF(unlimited) ;\n",
+      "\t|S513 nPF(unlimited) ;\n",
+      "\t|S513 pPF(unlimited) ;\n",
+      "\tfloat64 Fluor_Chl_a(unlimited) ;\n",
+      "\tfloat64 Fluor_Phaeo(unlimited) ;\n",
+      "\t|S513 Comments(unlimited) ;\n",
+      "\n",
+      "// global attributes:\n",
+      "}"
+     ]
+    }
+   ],
+   "source": [
+    "HPLC_bbrs.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4225,7 +4326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4234,7 +4335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4243,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4251,7 +4352,7 @@
     "\n",
     "HPLC = [HPLC_bbrs, HPLC_mote, HPLC_hpl, HPLC_ngsfc]\n",
     "\n",
-    "pigments = [\"Fuco\",\"Perid\",\"Allo\",\"But_fuco\",\"Hex_fuco\",\"Zea\",\"Tot_Chl_b\"]\n",
+    "pigments = [\"Fuco\",\"Perid\",\"Allo\",\"But_fuco\",\"Hex_fuco\",\"Zea\",\"Tot_Chl_b\", \"DP\", \"Tot_Chl_a\", \"TChl\"]\n",
     "\n",
     "\n",
     "for dat in HPLC:\n",
@@ -4261,7 +4362,10 @@
     "        # print(dat[pig].values.dtype)\n",
     "        if dat[pig].values.dtype != np.float64:\n",
     "            # print(\"HHHHEEEEY therey\")\n",
-    "            dat[pig].values = convert_numeric_data(dat, \"Tot_Chl_b\")"
+    "            dat[pig].values = convert_numeric_data(dat, pig)\n",
+    "        # remove outliers!\n",
+    "        dat[pig].values[dat[pig].values<0] = np.nan\n",
+    "        dat[pig].values[dat[pig].values>1000000] = np.nan"
    ]
   },
   {
@@ -4273,7 +4377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -4311,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4320,12 +4424,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date_time_UTC</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>Fuco</th>\n",
+       "      <th>Perid</th>\n",
+       "      <th>Allo</th>\n",
+       "      <th>But_fuco</th>\n",
+       "      <th>Hex_fuco</th>\n",
+       "      <th>Zea</th>\n",
+       "      <th>Tot_Chl_b</th>\n",
+       "      <th>DP</th>\n",
+       "      <th>Tot_Chl_a</th>\n",
+       "      <th>TChl</th>\n",
+       "      <th>dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1995-12-13 08:11:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1995-12-13 08:11:00</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.139</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995-12-13 08:11:00</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.163</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1995-12-13 08:11:00</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.021</td>\n",
+       "      <td>0.086</td>\n",
+       "      <td>0.024</td>\n",
+       "      <td>0.141</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.408</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1995-12-13 08:11:00</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.034</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.241</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BBRS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562</th>\n",
+       "      <td>2017-01-12 08:17:00</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.626</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>0.703</td>\n",
+       "      <td>1.467</td>\n",
+       "      <td>1.879</td>\n",
+       "      <td>NGSFC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>2017-01-12 08:17:00</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0.468</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.522</td>\n",
+       "      <td>1.014</td>\n",
+       "      <td>1.309</td>\n",
+       "      <td>NGSFC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>2017-01-12 08:17:00</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0.070</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>0.209</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>NGSFC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>565</th>\n",
+       "      <td>2017-01-12 08:17:00</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.007</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>NGSFC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>2017-01-12 08:17:00</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>NGSFC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1598 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date_time_UTC  depth   Fuco  Perid   Allo  But_fuco  Hex_fuco  \\\n",
+       "0   1995-12-13 08:11:00    1.0  0.008  0.005    NaN     0.002     0.008   \n",
+       "1   1995-12-13 08:11:00    7.0  0.009  0.006  0.001     0.002     0.010   \n",
+       "2   1995-12-13 08:11:00   15.0  0.008  0.010  0.001     0.003     0.011   \n",
+       "3   1995-12-13 08:11:00   25.0  0.065  0.008  0.006     0.021     0.086   \n",
+       "4   1995-12-13 08:11:00   35.0  0.034  0.009  0.002     0.010     0.042   \n",
+       "..                  ...    ...    ...    ...    ...       ...       ...   \n",
+       "562 2017-01-12 08:17:00   25.0  0.626  0.011  0.015       NaN     0.016   \n",
+       "563 2017-01-12 08:17:00   35.0  0.468  0.003  0.004       NaN     0.018   \n",
+       "564 2017-01-12 08:17:00   55.0  0.070    NaN  0.001     0.008     0.023   \n",
+       "565 2017-01-12 08:17:00   75.0  0.018    NaN    NaN     0.003     0.007   \n",
+       "566 2017-01-12 08:17:00  100.0  0.018    NaN    NaN     0.002     0.005   \n",
+       "\n",
+       "       Zea  Tot_Chl_b     DP  Tot_Chl_a   TChl dataset  \n",
+       "0    0.004      0.018    NaN      0.107    NaN    BBRS  \n",
+       "1    0.008      0.025    NaN      0.139    NaN    BBRS  \n",
+       "2    0.008      0.032    NaN      0.163    NaN    BBRS  \n",
+       "3    0.024      0.141    NaN      0.408    NaN    BBRS  \n",
+       "4    0.012      0.107    NaN      0.241    NaN    BBRS  \n",
+       "..     ...        ...    ...        ...    ...     ...  \n",
+       "562  0.006      0.029  0.703      1.467  1.879   NGSFC  \n",
+       "563  0.004      0.025  0.522      1.014  1.309   NGSFC  \n",
+       "564  0.004      0.045  0.151      0.209  0.310   NGSFC  \n",
+       "565    NaN      0.010  0.038      0.053  0.076   NGSFC  \n",
+       "566  0.001        NaN  0.026      0.042  0.056   NGSFC  \n",
+       "\n",
+       "[1598 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HPLC_FULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export dataframe to interpolate/integrate\n",
-    "HPLC_FULL.to_csv(\"HPLC_SizePigments.csv\")"
+    "HPLC_FULL.to_csv(\"../Manuscript2DataAnalysis/DATA/HPLC_SizePigments.csv\")"
    ]
   },
   {
