more diversity work

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData_V2.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData_V2.ipynb
@@ -843,11 +843,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# add diversity data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shannon_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/shannon_div_excl_nano_palm.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "\n",
+    "\n",
+    "diatom_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/diatom_diversity.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "colnames(diatom_div)<-paste(colnames(diatom_div),\"diatom\",sep=\"_\")\n",
+    "\n",
+    "dino_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/dino_diversity.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "colnames(dino_div)<-paste(colnames(dino_div),\"diatom\",sep=\"_\")\n",
+    "\n",
+    "diatom_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/diatom_diversity.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "colnames(diatom_div)<-paste(colnames(diatom_div),\"diatom\",sep=\"_\")\n",
+    "\n",
+    "diatom_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/diatom_diversity.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "colnames(diatom_div)<-paste(colnames(diatom_div),\"diatom\",sep=\"_\")\n",
+    "\n",
+    "diatom_div <- read.csv(\"DataAnalysis/PHYTOMICROSCOPY/diatom_diversity.csv\") %>%\n",
+    "    select(time_month, diversity, spec_richness, tot_abundance)\n",
+    "colnames(diatom_div)<-paste(colnames(diatom_div),\"diatom\",sep=\"_\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -877,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,14 +924,15 @@
     "                           zoo_ds_month_cleaned,\n",
     "                           SeaWiFS_month,\n",
     "                           MODIS_month,\n",
-    "                           SatCONCAT_month\n",
+    "                           SatCONCAT_month,\n",
+    "                           shannon_div\n",
     "                          ) %>% \n",
     "  reduce(full_join, by = c(\"time_month\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,11 +988,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(CARIACO_dat_joined_truncated, \"DATA/January/Combined_CARIACO_data_v5.csv\")"
+    "write.csv(CARIACO_dat_joined_truncated, \"DATA/January/Combined_CARIACO_data_v6.csv\")"
    ]
   },
   {
