--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/ClimateRemoldGrib2CSV.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/ClimateRemoldGrib2CSV.ipynb
@@ -107,9 +107,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
